--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -33,7 +33,7 @@
     "@types/react-dom": "18.0.6",
     "babel-loader": "^8.2.5",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.2",
     "eslint-plugin-storybook": "^0.6.6",
     "typescript": "4.8.4"
   }
