--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@tsconfig/next-strictest": "^1.0.0",
     "@types/aos": "^3.0.4",
     "@types/node": "18.11.2",
     "@types/react": "18.0.21",
