--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@tsconfig/next-strictest/tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
