--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
+    "lodash-es": "^4.17.21",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -29,6 +30,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@tsconfig/next-strictest": "^1.0.0",
     "@types/aos": "^3.0.4",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
