--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "type-check": "tsc --noEmit",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./public,./styles -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
