--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -76,7 +76,7 @@ web_modules/
 .env
 # .env.development.local
 # .env.test.local
-.env.production.local
+# .env.production.local
 .env.local
 
 # parcel-bundler cache (https://parceljs.org/)
