--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "ts-node --transpile-only ./bin/www.ts",
+    "start:local": "env-cmd -f ./.env.production.local ts-node --transpile-only ./bin/www.ts",
     "dev": "@powershell -Command $env:DEBUG='*'; env-cmd -f ./.env.development.local nodemon ./bin/www.ts",
     "prettier": "prettier --write \"**/*.{js,ts}\"",
     "type-check": "tsc --noEmit",
