fix(backend): rename production db

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -2,7 +2,7 @@
 MONGO_HOST=mongodb
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=jajaja
-MONGO_DB_NAME=staycation
+MONGO_DB_NAME=storeGG
 
 # Node.js
 NODE_ENV=production
