--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "debug": "^4.3.4",
@@ -44,6 +45,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
     "@types/connect-flash": "^0.0.37",
+    "@types/connect-mongodb-session": "^2.4.4",
     "@types/cors": "^2.8.12",
     "@types/csurf": "^1.11.2",
     "@types/debug": "^4.1.7",
