feat(backend): implement sign up member api

--- a/backend/.env.development.local
+++ b/backend/.env.development.local
@@ -7,5 +7,5 @@ MONGO_DB_NAME=storeGGDev
 # Node.js
 NODE_ENV=development
 
-# Express session secret
-SESSION_SECRET=very-secret-text
+# Secret text for express-session & JWT
+BACKEND_SECRET=very-secret-text
