--- a/backend/.env.production.local
+++ b/backend/.env.production.local
@@ -7,5 +7,5 @@ MONGO_DB_NAME=storeGG
 # Node.js
 NODE_ENV=production
 
-# Express session secret
-SESSION_SECRET=13cdae1b9430b630338b182a88852273
+# Secret text for express-session & JWT
+BACKEND_SECRET=13cdae1b9430b630338b182a88852273
