--- a/backend/.env.production
+++ b/backend/.env.production
@@ -7,5 +7,5 @@ MONGO_DB_NAME=storeGG
 # Node.js
 NODE_ENV=production
 
-# Express session secret
-SESSION_SECRET=169935ac4e0f3a58f27979bd61ef478b
+# Secret text for express-session & JWT
+BACKEND_SECRET=169935ac4e0f3a58f27979bd61ef478b
