--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "helmet": "^6.0.0",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongodb-uri": "^0.9.7",
@@ -38,6 +39,7 @@
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "ts-node": "^10.8.1",
     "validator": "^13.7.0"
@@ -53,12 +55,14 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/http-errors": "^1.8.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.184",
     "@types/method-override": "^0.0.32",
     "@types/mongodb-uri": "^0.9.1",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
