--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,17 @@ services:
     ports:
       - "27017:27017"
 
+  backend:
+    build: ./backend
+    volumes:
+      - public_uploads:/home/public/uploads
+    env_file:
+      - ./backend/.env.production
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongodb
+
 volumes:
   database:
+  public_uploads:
