--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
+    "http-status-codes": "^2.2.0",
     "lodash-es": "^4.17.21",
     "next": "^13.0.2",
     "react": "^18.2.0",
