--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,13 @@
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash-es": "^4.17.21",
     "next": "^13.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -32,6 +35,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@tsconfig/next-strictest": "^1.0.0",
     "@types/aos": "^3.0.4",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.11.2",
     "@types/react": "18.0.21",
