--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "aos": "^2.3.4",
     "classnames": "^2.3.2",
     "http-status-codes": "^2.2.0",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash-es": "^4.17.21",
+    "ms": "^2.1.3",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,8 +37,10 @@
     "@storybook/testing-library": "^0.0.13",
     "@tsconfig/next-strictest": "^1.0.0",
     "@types/aos": "^3.0.4",
+    "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash-es": "^4.17.6",
+    "@types/ms": "^0.7.31",
     "@types/node": "18.11.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
