--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.2",
     "eslint-plugin-storybook": "^0.6.7",
+    "storybook-addon-next": "^1.7.1",
     "typescript": "4.8.4"
   }
 }
