feat(client): implement basic SEO

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,1 +1,5 @@
+# This service base URL (The client)
+NEXT_PUBLIC_THIS_BASE_URL=http://localhost:8080
+
+# Backend service base URL
 NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:3000
