build: setup production build

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -5,7 +5,7 @@
 /.pnp
 .pnp.js
 
-# testing
+# testing`
 /coverage
 
 # next.js
@@ -26,7 +26,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+# .env*.local
 
 # vercel
 .vercel
